test: 테스트 코드에 검색 로직 추가